--- a/_posts/2007-06-30-developing-for-net-on-the-mac-part-1-building-mono.html
+++ b/_posts/2007-06-30-developing-for-net-on-the-mac-part-1-building-mono.html
@@ -1,5 +1,5 @@
 ---
-title: Developing for .NET on the Mac, Part 1: Building Mono for the First Time
+title: 'Developing for .NET on the Mac, Part 1: Building Mono for the First Time'
 layout: post
 categories:
 - .NET
