--- a/_posts/2007-06-30-developing-for-net-on-the-mac-part-1-building-mono.html
+++ b/_posts/2007-06-30-developing-for-net-on-the-mac-part-1-building-mono.html
@@ -37,7 +37,8 @@ categories:
 
 <p>Also, it's often very handy to have a script around that will set up all of your paths and whatnot to your custom build of mono. The <a href="http://www.mono-project.com/Parallel_Mono_Environments">Parallel Mono Environments</a> page on the Mono website describes this, although I had to modify mine a bit to get it working right. Here's what it looks like now:</p>
 
-<pre><code>#!/bin/bash
+{% highlight bash %}
+#!/bin/bash
 MONO_PREFIX=/opt/mono
 GNOME_PREFIX=/opt/gnome
 export LD_LIBRARY_PATH=$MONO_PREFIX/lib:/sw/lib:$LD_LIBRARY_PATH
@@ -45,7 +46,8 @@ export C_INCLUDE_PATH=$MONO_PREFIX/include:$GNOME_PREFIX/include:/sw/include:/Li
 export ACLOCAL_PATH=$MONO_PREFIX/share/aclocal
 export PKG_CONFIG_PATH=$MONO_PREFIX/lib/pkgconfig:$GNOME_PREFIX/lib/pkgconfig:/sw/lib/pkgconfig:/usr/lib/pkgconfig:/usr/local/lib/pkgconfig:/usr/X11R6/lib/pkgconfig:/Library/Frameworks/Mono.framework/Versions/1.2.2.1/lib/pkgconfig
 PATH=$MONO_PREFIX/bin:$PATH:/sw/bin
-PS1="[mono] \w @ "</code></pre>
+PS1="[mono] \w @ "
+{% endhighlight %}
 
 <p>Mine is stored in <code>~/mono-dev-env</code> and is invoked via <code>source ~/mono-dev-env</code></p>
 
