Remove explicit link.

--- a/_posts/2007-06-11-just-switched-to-subtext-195.html
+++ b/_posts/2007-06-11-just-switched-to-subtext-195.html
@@ -15,7 +15,7 @@ layout: post
     <ol>
         <li>Open the properties for Content Root and make sure that your ASP.NET version is 2.0. If you have to change it, be aware that it may take some time for GoDaddy to update its servers, and it's not a terribly great idea to upload files to your server until this is done. </li>
         <li>Create a directory (I'm assuming you'll call it 'blog'). Give it Read, Web, Write, and SetRoot permissions. </li>
-        <li>If you want to use <em>Photo Galleries</em> or the <em>MetaWeblog API's MediaObject, </em>you'll also need to create a directory called blog/Images and make sure that it has similar permissions (I haven't actually done this part, since the setup guide at <a href="http://www.subtextproject.com/Home/About/Docs/Installation/tabid/111/Default.aspx">http://www.subtextproject.com/Home/About/Docs/Installation/tabid/111/Default.aspx</a> says it's optional) </li>
+        <li>If you want to use <em>Photo Galleries</em> or the <em>MetaWeblog API's MediaObject, </em>you'll also need to create a directory called blog/Images and make sure that it has similar permissions (I haven't actually done this part, since the <a href="http://www.subtextproject.com/Home/About/Docs/Installation/tabid/111/Default.aspx">setup guide</a> says it's optional) </li>
         <li>Be aware that steps 2 and 3 may take a while to complete on GoDaddy's end. I don't recommend uploading files until the Control Panel says that everything is up to date. </li>
     </ol>
     </li>
