--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: daveBlog
 
       </header>
 
-{% for post in paginator.post %}
+{% for post in paginator.posts %}
       <section>
         <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
         <div>
