Add Twitter link.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@ title: daveBlog
       <header>
         <h1>daveBlog</h1>
         <p>There is a madness to my method&hellip;</p>
-
-
         <p class="view"><a href="https://github.com/david-mitchell">View My GitHub Profile</a></p>
-
+        <p class="view"><a href="http://https://twitter.com/theDMitchell">Follow me on Twitter</a></p>
       </header>
 
 {% for post in paginator.posts %}
