--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: daveBlog
 
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
+    <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Site feed">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -22,6 +23,7 @@ title: daveBlog
         <p>There is a madness to my method&hellip;</p>
         <p class="view"><a href="https://github.com/david-mitchell">View My GitHub Profile</a></p>
         <p class="view"><a href="http://https://twitter.com/theDMitchell">Follow me on Twitter</a></p>
+        <p class="view"><a href="/atom.xml">Site feed</a></p>
       </header>
 
 {% for post in paginator.posts %}
