--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: daveBlog
         <p>There is a madness to my method&hellip;</p>
         <p class="view"><a href="https://github.com/david-mitchell">View My GitHub Profile</a></p>
         <p class="view"><a href="https://twitter.com/theDMitchell">Follow me on Twitter</a></p>
-        <p class="view"><a href="https://www.logos.com/jobs/SoftwareDeveloper">Come work with me!</a></p>
+        <p class="view"><a href="https://gusto.com/about/careers">Come work with me!</a></p>
         <p class="view"><a href="/atom.xml">Site feed</a></p>
       </header>
 
