--- a/index.html
+++ b/index.html
@@ -1,69 +1,95 @@
 ---
-title: daveBlog
+title: Mandy's Tech Blog
 ---
-<!doctype html>
+
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>daveBlog</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <title>Mandy's Tech Blog</title>
 
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
-    <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Site feed">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="/stylesheets/styles.css" />
+    <link rel="stylesheet" href="/stylesheets/pygment_trac.css" />
+    <link
+      rel="alternate"
+      type="application/atom+xml"
+      href="/atom.xml"
+      title="Site feed"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1>daveBlog</h1>
-        <p>There is a madness to my method&hellip;</p>
-        <p class="view"><a href="https://github.com/david-mitchell">View My GitHub Profile</a></p>
-        <p class="view"><a href="https://twitter.com/theDMitchell">Follow me on Twitter</a></p>
-        <p class="view"><a href="https://gusto.com/about/careers">Come work with me!</a></p>
+        <h1>Mandy's Tech Blog</h1>
+        <p class="view">
+          <a href="https://github.com/david-mitchell">View My GitHub Profile</a>
+        </p>
+        <p class="view">
+          <a href="https://twitter.com/theDMitchell">Follow me on Twitter</a>
+        </p>
+        <p class="view">
+          <a href="https://gusto.com/about/careers">Come work with me!</a>
+        </p>
         <p class="view"><a href="/atom.xml">Site feed</a></p>
       </header>
 
-{% for post in paginator.posts %}
+      {% for post in paginator.posts %}
       <section>
         <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
         <div>
           {{ post.content }}
         </div>
       </section>
-{% endfor %}
+      {% endfor %}
 
       <footer>
         <p class="pagination">
-{% if paginator.previous_page %}
-          <a href="/page{{paginator.previous_page}}" class="previous">Previous</a>
-{% else %}
+          {% if paginator.previous_page %}
+          <a href="/page{{paginator.previous_page}}" class="previous"
+            >Previous</a
+          >
+          {% else %}
           <span class="previous">Previous</span>
-{% endif %}
-          <span class="page_number ">Page: {{paginator.page}} of {{paginator.total_pages}}</span>
-{% if paginator.next_page %}
-          <a href="/page{{paginator.next_page}}" class="next ">Next</a>
-{% else %}
-          <span class="next ">Next</span>
-{% endif %}
+          {% endif %}
+          <span class="page_number"
+            >Page: {{paginator.page}} of {{paginator.total_pages}}</span
+          >
+          {% if paginator.next_page %}
+          <a href="/page{{paginator.next_page}}" class="next">Next</a>
+          {% else %}
+          <span class="next">Next</span>
+          {% endif %}
         </p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>
+          <small
+            >Hosted on GitHub Pages &mdash; Theme by
+            <a href="https://github.com/orderedlist">orderedlist</a></small
+          >
+        </p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-2133389-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
+    <script type="text/javascript">
+      var gaJsHost =
+        "https:" == document.location.protocol ? "https://ssl." : "http://www.";
+      document.write(
+        unescape(
+          "%3Cscript src='" +
+            gaJsHost +
+            "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"
+        )
+      );
+    </script>
+    <script type="text/javascript">
+      try {
+        var pageTracker = _gat._getTracker("UA-2133389-1");
+        pageTracker._trackPageview();
+      } catch (err) {}
+    </script>
   </body>
 </html>
