--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ title: Mandy's Tech Blog
       <header>
         <h1>Mandy's Tech Blog</h1>
         <p class="view">
-          <a href="https://github.com/david-mitchell">View My GitHub Profile</a>
+          <a href="https://github.com/amanda-mitchell"
+            >View My GitHub Profile</a
+          >
         </p>
         <p class="view">
           <a href="https://twitter.com/theDMitchell">Follow me on Twitter</a>
