Update Twitter handle.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Mandy's Tech Blog
           >
         </p>
         <p class="view">
-          <a href="https://twitter.com/theDMitchell">Follow me on Twitter</a>
+          <a href="https://twitter.com/mandymmitchell">Follow me on Twitter</a>
         </p>
         <p class="view">
           <a href="https://gusto.com/about/careers">Come work with me!</a>
